<resources>
    <string name="app_name">TutorApp</string>
    <string name="title_activity_login">TutorApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titleAddSubjects">Mis temas de enseñanza</string>
    <string name="titleReservations">Mis reservas</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="no_text"> </string>
    <string name="registration_message">You are not registered yet. Use the registration button to complete your registration.</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="registration_button">Registrarme en TutorApp</string>
    <string name="textRegister">Registrarme</string>
    <string name="txtAcademicGroupName">Grupo Academico</string>
    <string name="txtDateCreation">Fecha de creacion</string>
    <string name="txtDate">Fecha de Nacimiento</string>
    <string name="txtSpecialities">Especialidades</string>
    <string name="stg_password">Contraseña</string>
    <string name="str_user">Usuario</string>
    <string name="str_hint">Nombres</string>
    <string name="str_dni">DNI</string>
    <string name="str_telephone">Telefono</string>
    <string name="str_address">Dirección</string>
    <string name="str_academic_group">Grupo Académico</string>
    <string name="strAddSubject">Agregar Tema</string>
    <string name="reservationAbout">Acerca de la reserva</string>
    <string name="AcceptReservation">Aceptar Reserva</string>
    <string name="discardReservation">Rechazar Reserva</string>
    <string name="addSubject">Agregar Tema</string>
    <string-array name="autocomplete">
        <item>johnpaul@yahoo.com</item>
        <item>marykate@yahoo.com</item>
        <item>kelvinjames@yahoo.com</item>
        <item>henrysweart@gmail.com</item>
        <item>gracepowell@yahoo.com</item>
    </string-array>

</resources>
